--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@next/font": "13.3.1",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "firebase": "^9.22.2",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
     "sass": "^1.62.1"
   }
